# windows-bcr

./: CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: publish.yaml  release.yaml  release_prep.sh
e2e/smoke/: MODULE.bazel  WORKSPACE.bazel
windows/: extensions.bzl
windows/private/extensions/: common.bzl  msvc_runtime.bzl  windows_sdk.bzl
